2014-11-25  Martin Liska  <mliska@suse.cz>

PR bootstrap/64050
	PR ipa/64060
	* sreal.c (sreal::operator+): Addition fixed.
	(sreal::signedless_plus): Negative numbers are
	handled correctly.
	(sreal::operator-): Subtraction is fixed.
	(sreal::signedless_minus): Negative numbers are
	handled correctly.
	* sreal.h (sreal::operator<): Equal negative numbers
	are compared correctly.
	(sreal::shift): New checking asserts are introduced.
	Operation is fixed.
	* gcc.dg/plugin/plugin.exp: New plugin.
	* gcc.dg/plugin/sreal-test-1.c: New test.
	* gcc.dg/plugin/sreal_plugin.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@218048 138bc75d-0d04-0410-961f-82ee72b054a4